--- a/requirements.txt
+++ b/requirements.txt
@@ -84,6 +84,7 @@ sqlparse==0.4.2
 termcolor==1.1.0
 text-unidecode==1.3
 tomli==2.0.1
+tqdm==4.64.0
 trio==0.19.0
 trio-websocket==0.9.2
 ua-parser==0.10.0
